# world-engine

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: agent.rs  db.rs  graph.rs  main.rs  parser.rs  query.rs  serializer.rs  server.rs  signal.rs  state.rs  stats.rs
src/agent/: handlers.rs  mod.rs  npc.rs  player.rs
src/db/: db.rs
src/graph/: graph.rs  mod.rs  parser.rs
src/llm/: classifier.rs  mod.rs
src/memory/: memory.rs  mod.rs
src/server/: server.rs
src/signal/: signal.rs
visualizer/: index.html
visualizer/css/: main.css
visualizer/js/: awareness.js  config.js  detail.js  graph.js  main.js  panel.js  signal.js  websocket.js
