[package]
name = "world-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }  # async runtime
serde = { version = "1", features = ["derive"] } # serialization
serde_json = "1"                                  # JSON bridge later
reqwest = { version = "0.11", features = ["json"] } # HTTP for LLM calls
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = "0.21"
futures = "0.3"
surrealdb = { version = "2", features = ["kv-rocksdb"] }